<resources
    xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="MissingTranslation">My Bus Edinburgh</string>
    <string name="app_description">View live bus data in Edinburgh</string>
    <string name="app_author" tools:ignore="MissingTranslation">Niall Scott</string>
    <string name="search_hint">Search bus stops and places</string>
    <string name="asset_db_version" tools:ignore="MissingTranslation">1372651209761</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="no">No</string>
    <string name="okay">OK</string>
    <string name="search">Search</string>
    <string name="select">Select</string>
    <string name="submit">Submit</string>
    <string name="yes">Yes</string>
    <string name="prox_alert_add">Add proximity alert</string>
    <string name="prox_alert_rem">Remove proximity alert</string>
    <string name="time_alert_add">Add arrival alert</string>
    <string name="time_alert_rem">Remove arrival alert</string>
    <string name="favourite_add">Add bus stop as favourite</string>
    <string name="favourite_rem">Remove bus stop as favourite</string>
    <string name="bus_stop_db_updated">My Bus Edinburgh: The stop database has been updated to the latest version.</string>
    <string name="bus_stop_db_no_updates">My Bus Edinburgh: No stop database updates found.</string>
    <string name="times_never">never</string>
    <string name="times_lessthanoneminago">less than 1 minute ago</string>
    <plurals name="times_minsago">
        <item quantity="one">1 minute ago</item>
        <item quantity="other">%d minutes ago</item> 
    </plurals>
    <string name="times_greaterthanhour">more than 1 hour ago</string>
    <string name="busstop" tools:ignore="MissingTranslation">%1$s (%2$s)</string>
    <string name="busstop_locality" tools:ignore="MissingTranslation">%1$s, %2$s (%3$s)</string>
    <string name="busstop_coloured" tools:ignore="MissingTranslation"><![CDATA[%1$s <font color="#989898">(%2$s)</font>]]></string>
    <string name="busstop_locality_coloured" tools:ignore="MissingTranslation"><![CDATA[%1$s, %2$s <font color="#989898">(%3$s)</font>]]></string>
    <string name="addeditstop_title">Add/edit favourite stop</string>
    <string name="addproxalert_title">Add new proximity alert</string>
    <string name="addtimealert_title">Add new arrival alert</string>
    <string name="alertmanager_title">Alert manager</string>
    <string name="busstopdetails_title">Bus stop details</string>
    <string name="map_title">Bus stop map</string>
    <string name="displaystopdata_title">Live departures</string>
    <string name="enterstopcode_title">Enter bus stop code</string>
    <string name="favouritestops_title">Favourite bus stops</string>
    <string name="neareststops_title">Nearest bus stops</string>
    <string name="newsupdates_title">News and updates</string>
    <string name="preferences_title">Settings</string>
    <string name="preferences_category_general">General</string>
    <string name="preferences_checkbox_general_showfavourites">Show favourites</string>
    <string name="preferences_checkbox_general_showfavourites_ticked">Untick to show the home menu when the application is launched</string>
    <string name="preferences_checkbox_general_showfavourites_unticked">Tick to show favourite stops when the application is launched</string>
    <string name="preferences_checkbox_general_dbupdate">Auto update database</string>
    <string name="preferences_dialog_general_update">Update stop database</string>
    <string name="preferences_dialog_general_update_summary">Check for updates, and update if a new version is available</string>
    <string name="preferences_dialog_general_update_message">Are you sure you want to update the bus stop database?</string>
    <string name="preferences_dialog_general_backup">Backup favourites</string>
    <string name="preferences_dialog_general_backup_summary">To external storage</string>
    <string name="preferences_dialog_general_backup_message">Are you sure you want to backup your favourite stops list?</string>
    <string name="preferences_dialog_general_restore">Restore favourites</string>
    <string name="preferences_dialog_general_restore_summary">From external storage</string>
    <string name="preferences_dialog_general_restore_message">Are you sure you want to restore your favourite stops list? Warning: This will overwrite your current favourite stops list.</string>
    <string name="preferences_category_alerts">Alerts</string>
    <string name="preferences_checkbox_alerts_sound">Use sound</string>
    <string name="preferences_checkbox_alerts_vibrate">Use vibration</string>
    <string name="preferences_checkbox_alerts_vibrate_summary">If the device supports vibration</string>
    <string name="preferences_checkbox_alerts_led">Flash device LED</string>
    <string name="preferences_checkbox_alerts_led_summary">If the device supports it</string>
    <string name="preferences_category_bustimes">Bus Times Display</string>
    <string name="preferences_checkbox_bustimes_autorefresh">Auto refresh</string>
    <string name="preferences_checkbox_bustimes_autorefresh_ticked">Untick to not auto refresh by default</string>
    <string name="preferences_checkbox_bustimes_autorefresh_unticked">Tick to auto refresh by default</string>
    <string name="preferences_checkbox_bustimes_nightbus">Show night services</string>
    <string name="preferences_checkbox_bustimes_sorting">Sort by arrival time</string>
    <string name="preferences_list_bustimes_numdepartures">Number of departures</string>
    <string name="preferences_list_bustimes_dialog">Number of departures to show</string>
    <string name="preferences_category_map">Bus Stop Map</string>
    <string name="preferences_checkbox_map_autolocation">Enable location services</string>
    <string name="preferences_checkbox_map_zoom_buttons">Zoom buttons</string>
    <string name="preferences_dialog_map_clearsearchhistory">Clear search history</string>
    <string name="preferences_dialog_map_clearsearchhistory_summary">Remove all previous search terms from the map search facility</string>
    <string name="preferences_dialog_map_clearsearchhistory_message">Are you sure you want to clear your map search history?</string>
    <string name="preferences_category_neareststops">Nearest Stops Display</string>
    <string name="preferences_checkbox_neareststops_gpsdisabled">Disable GPS prompt</string>
    <string name="preferences_checkbox_neareststops_gpsdisabled_ticked">Untick to show a prompt when GPS is disabled</string>
    <string name="preferences_checkbox_neareststops_gpsdisabled_unticked">Tick to not show a prompt when GPS is disabled</string>
    <string name="preferences_backup_error_json_read">The backup could not be restored as the backup could not be successfully read.</string>
    <string name="preferences_backup_error_json_write">The data could not be backed up.</string>
    <string name="preferences_backup_error_mediaerror">There is a problem with the external storage. Is it present and not already in use?</string>
    <string name="preferences_backup_error_ioerror">There was an error during backup. The backup file could not be read or written.</string>
    <string name="preferences_backup_error_nofile">No backup file exists to restore from.</string>
    <string name="preference_backup_success">The database was successfully backed up to external storage.</string>
    <string name="preference_restore_success">The database was successfully restored from external storage.</string>
    <string-array name="preferences_num_departures_entries">
        <item>1 departure</item>
        <item>2 departures</item>
        <item>3 departures</item>
        <item>4 departures</item>
        <item>5 departures</item>
        <item>6 departures</item>
        <item>7 departures</item>
        <item>8 departures</item>
        <item>9 departures</item>
        <item>10 departures</item>
    </string-array>
    <string-array name="preferences_num_departures_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string name="addeditstop_title_add">Add favourite stop:</string>
    <string name="addeditstop_title_edit">Edit stop details:</string>
    <string name="addeditstop_description">Enter a name for this bus stop:</string>
    <string name="addeditstop_edit_stopname_hint">Stop name</string>
    <string name="addeditstop_error_blankstopname">You cannot have a blank stop name.</string>
    <string name="addeditstop_btn_save">Save</string>
    <string name="addproxalert_first">Alert me when I am within</string>
    <string-array name="addproxalert_distance_array">
        <item>100 metres (109 yards)</item>
        <item>250 metres (273 yards)</item>
        <item>500 metres (546 yards)</item>
        <item>750 metres (820 yards)</item>
        <item>1000 metres (1093 yards)</item>
    </string-array>
    <string name="addproxalert_second">of bus stop %s.</string>
    <string name="addproxalert_gps">For this feature to work properly, it is strongly advised that GPS is turned on. Tick this if you would like to go to the device preferences after you have set this alert to turn GPS on.</string>
    <string name="addproxalert_limitations">Show limitations</string>
    <string name="addtimealert_first">Alert me when any of these services</string>
    <string name="addtimealert_noservices">No services selected. You must select at least 1 service to continue.</string>
    <string name="addtimealert_isdue">is due</string>
    <string name="addtimealert_spinner_prompt">Select time trigger</string>
    <string name="addtimealert_services_title">Select service(s)</string>
    <string-array name="addtimealert_array">
        <item>now</item>
        <item>in 2 minutes</item>
        <item>in 5 minutes</item>
        <item>in 10 minutes</item>
        <item>in 15 minutes</item>
        <item>in 20 minutes</item>
        <item>in 25 minutes</item>
        <item>in 30 minutes</item>
    </string-array>
    <string name="addtimealert_busstop">or less at bus stop %s.</string>
    <string name="addtimealert_limitations">Show limitations</string>
    <string name="alertmanager_empty"><b>You currently have no alerts set.</b>\nYou can add time and proximity alerts from your favourite stops listing, the bus stop map, the nearby bus stops list and when viewing arrival times for a bus stop.</string>
    <string name="alertmanager_prox_title"><b>Proximity Alert</b></string>
    <string name="alertmanager_prox_text">You will be alerted when you are within %1$d metres of bus stop %2$s.\n\nFor the most accurate results, ensure GPS is turned on. This alert will be automatically removed 1 hour after being set, or if you restart your device.</string>
    <string name="alertmanager_time_title"><b>Bus Arrival Alert</b></string>
    <string name="busstopdetails_btn_showtimes">Bus times</string>
    <string name="busstopdetails_btn_streetview">Street view</string>
    <string name="busstopdetails_load_failed"><b>Problem loading stop</b>\nThis bus stop could not be found in the bus stop database.</string>
    <string name="main_favourite_stops">Favourite Bus Stops</string>
    <string name="main_enter_stop_code">Enter or Scan Code</string>
    <string name="main_bus_stop_map">Bus Stop Map</string>
</resources>