<?xml version="1.0" encoding="UTF-8"?>
<!--
/*
 * Copyright (C) 2009 Niall 'Rivernile' Scott
 *
 * This software is provided 'as-is', without any express or implied
 * warranty.  In no event will the authors or contributors be held liable for
 * any damages arising from the use of this software.
 *
 * The aforementioned copyright holder(s) hereby grant you a
 * non-transferrable right to use this software for any purpose (including
 * commercial applications), and to modify it and redistribute it, subject to
 * the following conditions:
 *
 *  1. This notice may not be removed or altered from any file it appears in.
 *
 *  2. Any modifications made to this software, except those defined in
 *     clause 3 of this agreement, must be released under this license, and
 *     the source code of any modifications must be made available on a
 *     publically accessible (and locateable) website, or sent to the
 *     original author of this software.
 *
 *  3. Software modifications that do not alter the functionality of the
 *     software but are simply adaptations to a specific environment are
 *     exempt from clause 2.
*/ -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <TextView
        android:id="@+id/addeditstop_text_description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/addeditstop_description" />
    <EditText
        android:id="@+id/addeditstop_edit_stopname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/addeditstop_text_description"
        android:hint="@string/addeditstop_edit_stopname_hint" />
    <Button
        android:id="@+id/addeditstop_button_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addeditstop_edit_stopname"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="10dip"
        android:text="@string/okay" />
    <Button
        android:id="@+id/addeditstop_button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/addeditstop_button_ok"
        android:layout_alignTop="@id/addeditstop_button_ok"
        android:text="@string/cancel" />
</RelativeLayout>